# python-project-50

./: .coverage  .flake8  .gitignore  Makefile  README.md  coverage.xml  file1.yml  file2.yml  pyproject.toml
.github/workflows/: ci.yml
gendiff/: constans.py  gendiff.py
gendiff/core/: build_diff.py  format_value.py  parsing_files.py
gendiff/formatters/: __init__.py  format_json.py  format_plain.py  format_stylish.py
gendiff/init_parser/: parser.py
gendiff/scripts/: build_diff.py  format_value.py  gendiff.py  get_parsing_files.py  parsing_files.py
tests/: test_build_diff.py  test_format_diff.py  test_format_value.py  test_gendiff.py  test_parsing_files.py  test_plain_format.py  test_yml_files.py
tests/fixtures/: json_result.json  nested_diff.json  simple_diff.json  simple_stylish_result
