[tool.poetry]
name = "python-project-50"
version = "0.1.0"
description = "Вычислитель отличий"
authors = ["Alexandr Knyazev <a.knyazev944@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = ["3.11", "^3.12"]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
